# CMake version
cmake_minimum_required (VERSION 2.8)

# project
project (dthls)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

# Library dependence
FIND_PACKAGE(DTUtils  REQUIRED)
INCLUDE_DIRECTORIES(${DTUTILS_INCLUDE_DIR}/dtutils)

FIND_PACKAGE(DTCURL  REQUIRED)
INCLUDE_DIRECTORIES(${DTCURL_INCLUDE_DIR})

FIND_PACKAGE(FFmpeg)
INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR})
if(FFMPEG_FOUND)
    ADD_DEFINITIONS(-DENABLE_FFMPEG)
endif()

# DEFS
ADD_DEFINITIONS(-DENABLE_LINUX)

#target-utils
#INCLUDE_DIRECTORIES(src/dtutils)
#AUX_SOURCE_DIRECTORY(src/dtutils SRC_UTILS)
#ADD_LIBRARY(dtutils STATIC ${SRC_UTILS})

# target - lib
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)
#INCLUDE_DIRECTORIES(src/dtutils)
AUX_SOURCE_DIRECTORY(src SRC_HLS)
ADD_LIBRARY(dthls STATIC ${SRC_HLS})
TARGET_LINK_LIBRARIES(dthls dtutils)
TARGET_LINK_LIBRARIES(dthls dtcurl)
if(FFMPEG_FOUND)
    TARGET_LINK_LIBRARIES(dthls ${FFMPEG_LIBRARIES})
endif()

# target - test
SET(SRC_TEST test/hls_test.c )
ADD_EXECUTABLE(test test/hls_test.c)
TARGET_LINK_LIBRARIES(test dthls dtutils)

INSTALL(TARGETS dthls
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    )
INSTALL(DIRECTORY include/ DESTINATION /usr/local/include/${PROJECT_NAME})
